--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -370,7 +370,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="yTJ-5R-X2p"/>
                                                     </constraints>
-                                                    <state key="normal" title="Analyze Objects">
+                                                    <state key="normal" title="Microsoft Vision">
                                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </state>
                                                     <userDefinedRuntimeAttributes>
@@ -388,7 +388,7 @@
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="KS4-uD-dAp"/>
                                                     </constraints>
-                                                    <state key="normal" title="Analyze Text">
+                                                    <state key="normal" title="Microsoft OCR">
                                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     </state>
                                                     <userDefinedRuntimeAttributes>
