Changing design of initial view Image credit goes to jaime750 from pixabay.com under CC0 Creative Commons

--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -29,21 +29,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avf-Yj-vcY">
-                                <rect key="frame" x="16" y="481" width="343" height="30"/>
-                                <state key="normal" title="Tap to Begin"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="JPA-rq-CG4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aK3-wI-O8G">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="i9T-lp-NUY">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <visualEffectView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FYe-wW-xkU">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" insetsLayoutMarginsFromSafeArea="NO" id="qfY-0M-fq3">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            </view>
+                                            <vibrancyEffect>
+                                                <blurEffect style="light"/>
+                                            </vibrancyEffect>
+                                        </visualEffectView>
+                                    </subviews>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Avf-Yj-vcY">
+                                <rect key="frame" x="60" y="461" width="255" height="50"/>
+                                <color key="backgroundColor" red="0.2581153035" green="0.61022597710000004" blue="0.69697469729999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="ERR-Zh-ZZd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <state key="normal" title="Tap to Begin">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="20"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="beginButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ZVR-uM-4IG"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDr-Ae-gQS">
-                                <rect key="frame" x="10" y="20" width="146" height="30"/>
+                            <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDr-Ae-gQS">
+                                <rect key="frame" x="10" y="30" width="170" height="30"/>
+                                <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="so7-lF-Fdk"/>
-                                    <constraint firstAttribute="width" constant="146" id="vKO-Bw-IBp"/>
+                                    <constraint firstAttribute="width" constant="170" id="vKO-Bw-IBp"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="Enter as Visually Impared"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                <state key="normal" title="Enter as Visually Impared">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="changeMode:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OLA-yh-FKi"/>
                                 </connections>
@@ -51,20 +95,28 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to Visualize" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Pu-Op-rib">
                                 <rect key="frame" x="16" y="92" width="343" height="42.5"/>
                                 <fontDescription key="fontDescription" name="BodoniSvtyTwoITCTT-Book" family="Bodoni 72" pointSize="35"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Avf-Yj-vcY" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="16" id="6z1-U5-t2z"/>
+                            <constraint firstItem="JPA-rq-CG4" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" id="2NG-4e-LCy"/>
+                            <constraint firstItem="Avf-Yj-vcY" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="60" id="6z1-U5-t2z"/>
+                            <constraint firstItem="meC-5s-1xX" firstAttribute="top" secondItem="aK3-wI-O8G" secondAttribute="bottom" id="83k-Gi-Cey"/>
+                            <constraint firstItem="aK3-wI-O8G" firstAttribute="trailing" secondItem="Azh-wt-un5" secondAttribute="trailing" id="9dr-KX-LHh"/>
                             <constraint firstItem="nDr-Ae-gQS" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="10" id="I3h-as-keP"/>
                             <constraint firstItem="1Pu-Op-rib" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" constant="16" id="Kjf-oV-aXw"/>
+                            <constraint firstItem="JPA-rq-CG4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Lgx-oi-8bf"/>
+                            <constraint firstItem="meC-5s-1xX" firstAttribute="top" secondItem="JPA-rq-CG4" secondAttribute="bottom" id="NIJ-ND-B5W"/>
+                            <constraint firstItem="JPA-rq-CG4" firstAttribute="trailing" secondItem="Azh-wt-un5" secondAttribute="trailing" id="ODM-zR-F0Q"/>
                             <constraint firstItem="Azh-wt-un5" firstAttribute="trailing" secondItem="1Pu-Op-rib" secondAttribute="trailing" constant="16" id="a71-wo-gHK"/>
                             <constraint firstItem="meC-5s-1xX" firstAttribute="top" secondItem="Avf-Yj-vcY" secondAttribute="bottom" constant="156" id="cr3-u5-M4f"/>
                             <constraint firstItem="1Pu-Op-rib" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" constant="72" id="egy-eD-ZcL"/>
-                            <constraint firstItem="nDr-Ae-gQS" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" id="fEc-wO-hqO"/>
-                            <constraint firstItem="Azh-wt-un5" firstAttribute="trailing" secondItem="Avf-Yj-vcY" secondAttribute="trailing" constant="16" id="g5O-M5-tFe"/>
+                            <constraint firstItem="nDr-Ae-gQS" firstAttribute="top" secondItem="NpW-nU-KRx" secondAttribute="bottom" constant="10" id="fEc-wO-hqO"/>
+                            <constraint firstItem="Azh-wt-un5" firstAttribute="trailing" secondItem="Avf-Yj-vcY" secondAttribute="trailing" constant="60" id="g5O-M5-tFe"/>
+                            <constraint firstItem="aK3-wI-O8G" firstAttribute="leading" secondItem="Azh-wt-un5" secondAttribute="leading" id="lKb-gu-8fr"/>
+                            <constraint firstItem="aK3-wI-O8G" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="yiN-K6-LIL"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Azh-wt-un5"/>
                     </view>
@@ -556,6 +608,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Background" width="275" height="183"/>
         <image name="Home-Button" width="512" height="512"/>
     </resources>
 </document>
