--- a/3rd Eye/Base.lproj/LaunchScreen.storyboard
+++ b/3rd Eye/Base.lproj/LaunchScreen.storyboard
@@ -30,12 +30,14 @@
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Icon" translatesAutoresizingMaskIntoConstraints="NO" id="CGz-Lx-8Fo">
                                             <rect key="frame" x="120" y="-178.5" width="135" height="1024"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="135" id="tFh-F3-duM"/>
+                                            </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="CGz-Lx-8Fo" firstAttribute="centerX" secondItem="MyM-OD-xtp" secondAttribute="centerX" id="AcV-jv-Vpn"/>
                                         <constraint firstItem="CGz-Lx-8Fo" firstAttribute="centerY" secondItem="MyM-OD-xtp" secondAttribute="centerY" id="TWV-vx-naN"/>
-                                        <constraint firstItem="CGz-Lx-8Fo" firstAttribute="leading" secondItem="MyM-OD-xtp" secondAttribute="leading" constant="120" id="ep6-Tx-dU6"/>
-                                        <constraint firstAttribute="trailing" secondItem="CGz-Lx-8Fo" secondAttribute="trailing" constant="120" id="u5S-po-1dn"/>
                                     </constraints>
                                 </view>
                                 <blurEffect style="light"/>
